# maintenance_dashboard

./: LICENSE  README.md  main.py  pyproject.toml  sample_case_predictive_maintenance.py  settings.py  test_case_predictive_maintenance.py  test_main.py
api/: load_data_router.py
api/tests/: test_load_data_router.py
dataset/: test.csv
models/: __init__.py  _setup.py
services/: __init__.py  extract_features.py  extract_features_service.py  load_data.py  machine_learning_service.py  model_service.py  predict_failures.py  preprocess_data.py  preprocess_data_service.py  train_model.py  visualize_data.py  visualize_data_service.py
services/tests/: test_model_service.py  tests_extract_features.py  tests_extract_features_service.py  tests_load_data.py  tests_preprocess_data.py  tests_preprocess_data_service.py  tests_visualize_data_service.py
tests/: mock_model.py  test_model_service.py  test_train_model.py  tests_extract_features.py  tests_load_data.py  tests_predict_failures.py  tests_preprocess_data.py  tests_visualize_data.py
