[tool.poetry]
name = "maintenance-dashboard"
version = "0.1.0"
description = ""
authors = ["Nistraa <nikola.strika@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
dash = "^2.17.0"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
pytest = "^8.2.1"
pydantic = "^2.7.2"
sqlmodel = "^0.0.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
